@@ -53,7 +53,8 @@ Imports:
     S4Vectors,
     robustbase,
     IRanges,
-    SummarizedExperiment
+    SummarizedExperiment,
+    MsCoreUtils
 Suggests:
     BiocStyle,
     caTools,
@@ -72,6 +73,8 @@ Enhances:
     Rgraphviz,
     Rmpi,
     XML
+Remotes:
+    RforMassSpectrometry/MsCoreUtils
 Description: Framework for processing and visualization of chromatographically
     separated and single-spectra mass spectral data. Imports from AIA/ANDI NetCDF,
     mzXML, mzData and mzML files. Preprocesses data for high-throughput, untargeted
