@@ -25,6 +25,8 @@ importFrom("robustbase", "lmrob", "lmrob.control")
 import("RColorBrewer")
 import("BiocParallel")
 
+importFrom("MsCoreUtils", "rbindFill")
+
 ## import("S4Vectors")
 importClassesFrom("S4Vectors", "Rle", "DataFrame")
 importFrom("S4Vectors", "split", "Rle", "DataFrame", "SimpleList")
